GO-1462: Swagger generated code sync. Added XSS to the swagger.
