# cmd/go-swagger/swagger.yml
@@ -1,5 +1,5 @@
 # Code generated by cmd/go-swagger/regen; DO NOT EDIT.
-# Generated at 2022-06-22T18:39:47Z. To re-generate, run the following in the repo root:
+# Generated at 2022-09-09T14:43:31Z. To re-generate, run the following in the repo root:
 # go run ./cmd/go-swagger/regen/regen.go
 
 consumes:
@@ -318,12 +318,12 @@ paths:
             type: string
         default:
           description: error occured
-  /xss/Sink/query/{safety}:
+  /xss/reflectedXss/query/{safety}:
     get:
       tags:
         - xss
-      description: demonstrates Reflected XSS via query, with vulnerable function _
-      operationId: XSSGetQuerySink
+      description: demonstrates Reflected XSS via query, with vulnerable function reflectedXss
+      operationId: XSSGetQueryReflectedXSS
       produces:
         - text/html
         - text/plain
@@ -342,12 +342,12 @@ paths:
             description: The response when succesful query happens
         default:
           description: Error occured
-  /xss/Sink/buffered-query/{safety}:
+  /xss/reflectedXss/buffered-query/{safety}:
     get:
       tags:
         - xss
-      description: demonstrates Reflected XSS via buffered-query, with vulnerable function _
-      operationId: XSSGetBufferedQuerySink
+      description: demonstrates Reflected XSS via buffered-query, with vulnerable function reflectedXss
+      operationId: XSSGetBufferedQueryReflectedXSS
       produces:
         - text/html
         - text/plain
@@ -428,46 +428,6 @@ paths:
         - ssrf
       description: demonstrates Server Side Request Forgery via query, with vulnerable function net/http
       operationId: SsrfGetQueryHTTP
-      produces:
-        - text/html
-        - text/plain
-      parameters:
-        - $ref: "#/parameters/safetyParam"
-        - name: input
-          in: query
-          description: the user provided input for the query vulnerability
-          required: true
-          type: string
-      responses:
-        200:
-          description: returns the rendered response as a string
-          schema:
-            type: string
-            description: The response when succesful query happens
-        default:
-          description: Error occured
-
-  /unvalidatedRedirect:
-    get:
-      tags:
-        - unvalidated_redirect
-      summary: front page of the Unvalidated Redirect vulnerability
-      operationId: UnvalidatedRedirectFront
-      produces:
-        - text/html
-      responses:
-        200:
-          description: served front end for Unvalidated Redirect page of Swagger API
-          schema:
-            type: string
-        default:
-          description: error occured
-  /unvalidatedRedirect/http.Redirect/query/{safety}:
-    get:
-      tags:
-        - unvalidated_redirect
-      description: demonstrates Unvalidated Redirect via query, with vulnerable function http.Redirect
-      operationId: UnvalidatedRedirectGetQueryRedirect
       produces:
         - text/html
         - text/plain
